--- a/votw.yml
+++ b/votw.yml
@@ -10,7 +10,7 @@ dependencies:
   - bleach=2.1.3=py36_0
   - ca-certificates=2018.03.07=0
   - cartopy=0.16.0=py36he7b4726_0
-  - certifi=2018.1.18=py36_0
+  - certifi=2018.4.16=py36_0
   - cffi=1.11.5=py36h342bebf_0
   - chardet=3.0.4=py36h96c241c_1
   - cryptography=2.2.2=py36h1de35cc_0
@@ -68,6 +68,7 @@ dependencies:
   - openssl=1.0.2o=h26aff7b_0
   - owslib=0.16.0=py36_0
   - packaging=17.1=py36_0
+  - pandas=0.22.0=py36h0a44026_0
   - pandoc=1.19.2.1=ha5e8f32_1
   - pandocfilters=1.4.2=py36h3b0b094_1
   - parso=0.2.0=py36_0
@@ -107,11 +108,11 @@ dependencies:
   - sphinx=1.7.2=py36_0
   - sphinxcontrib=1.0=py36h9364dc8_1
   - sphinxcontrib-websupport=1.0.1=py36h92f4a7a_1
-  - sqlite=3.22.0=h3efe00b_0
+  - sqlite=3.23.1=hf1716c9_0
   - terminado=0.8.1=py36_1
   - testpath=0.3.1=py36h625a49b_0
   - tk=8.6.7=h35a86e2_3
-  - tornado=5.0.1=py36_1
+  - tornado=5.0.2=py36_0
   - traitlets=4.3.2=py36h65bd3ce_0
   - typing=3.6.4=py36_0
   - urllib3=1.22=py36h68b9469_0
@@ -125,8 +126,15 @@ dependencies:
   - pip:
     - awscli==1.14.4
     - botocore==1.8.8
+    - click==6.7
+    - click-plugins==1.0.3
+    - cligj==0.4.0
     - colorama==0.3.7
+    - descartes==1.1.0
+    - fiona==1.7.11.post1
+    - geopandas==0.3.0
     - jmespath==0.9.3
+    - munch==2.3.1
     - pyasn1==0.4.2
     - pyyaml==3.12
     - rsa==3.4.2
